progress #2: fix label z-index

--- a/frontend/blooming/src/components/MobileInvitation/Create/Common.module.css
+++ b/frontend/blooming/src/components/MobileInvitation/Create/Common.module.css
@@ -67,6 +67,7 @@
   opacity: 0;
   overflow: hidden;
   position: absolute;
+  z-index: 2;
 }
 .imageContainer img {
   width: 82vw;
@@ -83,7 +84,7 @@
   padding: 20px 25px;
   color: #fff;
   position: absolute;
-  z-index: 20;
+  z-index: 1000;
   font-family: 'SUITE-regular';
   background-color: #b4b4b459;
 }
